--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             position: absolute;
             top: 20%;
             inset: 0;
-            background-image: url('munna.png');
+            background-image: url('munna0.png');
             background-size: cover;
             /* background-position: 50% 50%; */
             /*background-repeat: none;
